Add POST /groups
